fixed : .sek-hidden-on-tablets and .sek-hidden-on-mobiles breakpoints are wrong, with overlapping points. fixes #551

--- a/assets/front/scss/sek-base.scss
+++ b/assets/front/scss/sek-base.scss
@@ -137,10 +137,10 @@
 
 
 /* LEVEL VISIBILITY BY DEVICE */
-@media (min-width:767px){
+@media (min-width:768px){
   [data-sek-level="location"] .sek-hidden-on-desktops { display: none; }
 }
-@media (min-width:575px) and (max-width:768px){
+@media (min-width:575px) and (max-width:767px){
   [data-sek-level="location"] .sek-hidden-on-tablets { display: none; }
 }
 @media (max-width:575px){
